# CodegateMain

./: .gitignore  CLAUDE.md  README.md  TASKS.md
Project/: CLAUDE.md  package-lock.json  package.json  vite.config.js
Project/public/: vibe-preview-bridge.js
Project/src/: App.jsx  Profile.jsx  styles.css
agent/: README.md  pyproject.toml
agent/codegate_agent/: __init__.py  __main__.py  filetree.py  preview.py  projects.py  server.py
agent/codegate_agent/harness/: __init__.py  analysis.py  analysis_fallback.mjs  claude.py  codex.py  run_state.py  runner.py  scan.py
agent/tests/: test_harness.py  test_projects.py  test_server_security.py
analysis/: .gitignore  .mcp.json  README.md  UPSTREAM.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
analysis/.github/workflows/: ci.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml  run.py
backend/app/: __init__.py  config.py  deps.py  errors.py  logging.py  main.py  sse.py
backend/app/routers/: adjudicate.py  chat.py  health.py  keys.py  models.py  review.py  scan.py  usage.py
backend/app/schemas/: chat.py  keys.py  security.py
backend/app/services/: credentials.py  security_service.py  subprocess_runner.py  usage_service.py
backend/app/services/llm/: anthropic_provider.py  base.py  fake_provider.py  openai_provider.py  registry.py
backend/tests/: conftest.py  test_chat_stream.py  test_credentials.py  test_health.py  test_llm_adjudication.py  test_models.py  test_security_service.py  test_usage_service.py
frontend/: .gitignore  AGENT.md  TASKS.md
frontend/ideas/: ai_secure_dev_tool.md  web_hacker_tracker.md
frontend/mvp/: .env.example  README.md  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/mvp/e2e/: app.spec.js
frontend/mvp/scripts/: dev.js  run-e2e.js
frontend/mvp/src/: App.jsx  agent-progress.css  code-viewer.css  csv-viewer.css  profile-settings.css  theme.css
frontend/mvp/src/api/: client.js  localRuntime.js
frontend/mvp/src/components/: AgentProgress.jsx  CenterViewport.jsx  CodeViewer.jsx  CsvViewer.jsx  ErrorBoundary.jsx  LeftSidebar.jsx  ModelPicker.jsx  ProjectPicker.jsx  RightPanel.jsx  UserProfile.jsx
frontend/mvp/src/data/: dashboardData.js  mockData.js
frontend/mvp/src/hooks/: useDevServer.js  useFileTree.js  useModels.js  useProjects.js
frontend/mvp/src/lib/: highlight.js
frontend/mvp/src/test/: AgentProgress.test.jsx  App.test.jsx  CodeViewer.test.jsx  ErrorBoundary.test.jsx  LivePreview.test.jsx  ModelPicker.test.jsx  ProjectPicker.test.jsx  streamAgent.test.js  useDevServer.test.jsx
mvp/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
mvp/e2e/: app.spec.js
mvp/src/: App.jsx  agent-progress.css  code-viewer.css  main.jsx  profile-settings.css  project-launcher.css  theme.css
mvp/src/components/: AgentProgress.jsx  CenterViewport.jsx  CodeViewer.jsx  Dashboard.jsx  LeftSidebar.jsx  ModelPicker.jsx  Notifications.jsx  ProjectLauncher.jsx  RightPanel.jsx  UserProfile.jsx
mvp/src/data/: dashboardData.js  mockData.js
mvp/src/lib/: highlight.js  projectSource.js
mvp/src/test/: AgentProgress.test.jsx  App.test.jsx  Dashboard.test.jsx  ModelPicker.test.jsx  UserProfile.test.jsx  setup.js
redteam/: .gitignore  CMakeLists.txt  README.md
redteam/cmake/: Dependencies.cmake
redteam/examples/: request.example.json
redteam/include/redteam/: Enums.hpp  Factories.hpp  Glob.hpp  Hash.hpp  RedTeamService.hpp  Signals.hpp  Types.hpp
redteam/include/redteam/ports/: FileSource.hpp  LlmBackend.hpp
redteam/integration/: AGENT_INTEGRATION.md  red_team.tool.json  red_team_tool.py
redteam/src/adapters/common/: HttpClient.cpp  HttpClient.hpp  Json.hpp  JsonConvert.cpp  JsonConvert.hpp
redteam/src/adapters/driven/fs/: FilesystemFileSource.cpp  FilesystemFileSource.hpp  InMemoryFileSource.cpp  InMemoryFileSource.hpp  PathFilter.hpp
redteam/src/adapters/driven/llm/: BackendFactory.cpp  BackendFactory.hpp  DirectApiBackend.cpp  DirectApiBackend.hpp  FakeBackend.cpp  FakeBackend.hpp  ProbeResponseParser.cpp  ProbeResponseParser.hpp
redteam/src/adapters/driving/cli/: JsonReportWriter.cpp  JsonReportWriter.hpp  JsonRequestParser.cpp  JsonRequestParser.hpp  main.cpp
redteam/src/app/: RedTeamServiceImpl.cpp  RedTeamServiceImpl.hpp
redteam/src/domain/: Enums.cpp  FilterEngine.cpp  FilterEngine.hpp  FindingSynthesizer.cpp  FindingSynthesizer.hpp  FixHints.cpp  FixHints.hpp  FlowGraph.cpp  FlowGraph.hpp  Glob.cpp  IntentMapper.cpp  IntentMapper.hpp  LanguageDetector.cpp  LanguageDetector.hpp  PatternLibrary.cpp  PatternLibrary.hpp  ProbePlanner.cpp  ProbePlanner.hpp  Ranker.cpp  Ranker.hpp  Redactor.cpp  Redactor.hpp  RiskScorer.cpp  RiskScorer.hpp  Scan.hpp  SecretsScanner.cpp  SecretsScanner.hpp  Segmenter.cpp  Segmenter.hpp  TextUtil.hpp
redteam/tests/fixtures/projects/vuln_sample/: app.py  buf.c  server.js
redteam/tests/unit/: test_direct_backend.cpp  test_enums.cpp  test_file_source.cpp  test_filter_engine.cpp  test_flowgraph.cpp  test_glob.cpp  test_json_roundtrip.cpp  test_language_detector.cpp  test_probe_pipeline.cpp  test_riskscorer.cpp  test_secrets.cpp  test_segmenter.cpp  test_service.cpp
workspace/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.js
workspace/public/: vibe-preview-bridge.js
workspace/src/: App.jsx  styles.css
